@@ -27,4 +27,4 @@
 #--disable-forwarding
 
 #Disable multicast peer discovery
-#--disable-multicast
+#--lpd-disable
