@@ -40,6 +40,10 @@ endef
 
 FEATURES = cmd
 
+ifeq ($(CONFIG_KADNODE_ENABLE_LPD),y)
+FEATURES += lpd
+endif
+
 ifeq ($(CONFIG_KADNODE_ENABLE_AUTH),y)
 FEATURES += auth
 endif
