@@ -39,7 +39,7 @@ config kadnode
 #	option mode 'ipv4'
 
 ##Disable multicast peer discovery on the LAN.
-#	option disable_multicast '1'
+#	option lpd_disable '1'
 
 ##Disable port forwarding when this router is behind another
 ##router in a private network that supports UPnP/NAT-PMP.
