@@ -48,10 +48,10 @@ start_instance() {
 	OPTS=""
 
 	append_opts "$s" node_id user port ifce cmd_port web_port\
-		mcast_addr mode dns_port verbosity peerfile config \
+		lpd_addr mode dns_port verbosity peerfile config \
 		auth_add_pkey auth_add_skey value_id query_tld
 
-	append_opts_boolean "$s" disable_multicast disable_forwarding
+	append_opts_boolean "$s" lpd_disable disable_forwarding
 
 	echo "$OPTS" > $CONFIG_FILE
 
