@@ -9,6 +9,9 @@ kadnode (1.0) UNRELEASED; urgency=low
   * fix: listening peer discovery socket did not apply --ifce
   * increase maximum number of exported good peers to 150
   * allow DNS interface to return multiple IP addresses
+  * make local peer discovery a compile time option
+    * rename --disable-multicast to --lpd-disable
+    * rename --mcast-addr to --lpd-addr
 
  -- mwarning <moritzwarning@web.de>  Sun, 18 May 2014 16:51:22 +0200
 
